<resources>
    <string name="app_name">Mansion Courtyard</string>
    <string name="order">order</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="initial_quantity">1</string>
</resources>